graphics_initial_draft

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -55,3 +55,14 @@
 /star.png
 /utils/
 /views/
+/Capture.PNG
+/cartoon-globe.png
+/background.jpg
+/bg1.jpg
+/bg2.jpg
+/bg3.png
+/bg4.jpg
+/bg5.jpg
+/bg6.png
+/bg7.jpg
+/player.png
