updated MenuPanel and powerups' images

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -95,3 +95,18 @@
 /star1.png
 /earth2.png
 /test2.png
+/+1heart_powerup.png
+/1player_button.png
+/1player_hoverButton.png
+/2players_button.png
+/2players_hoverButton.png
+/MenuPanel.png
+/MenuPanel_test.png
+/credits_button.png
+/credits_hoverButton.png
+/help_button.png
+/help_hoverButton.png
+/invincible_powerup.png
+/player1_shield.png
+/player2_shield.png
+/swap_powerup.png
